unpackaged/main/default/objects/Hard_Inquiry_Meta_Data__c/Hard_Inquiry_Meta_Data__c.object-meta.xml
<CustomObject>
    <label>Hard Inquiry Meta Data</label>
    <nameField>
        <label>Hard Inquiry Meta Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hard Inquiry Meta Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>