unpackaged/main/default/objects/Hard_Inquiry_Meta_Data__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hard Inquiry Meta Data</relationshipLabel>
    <relationshipName>Hard_Inquiry_Meta_Data</relationshipName>
    <type>Lookup</type>
</CustomField>