unpackaged/main/default/objects/Hard_Inquiry_Meta_Data__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Hard Inquiry Meta Data</relationshipLabel>
    <relationshipName>Hard_Inquiry_Meta_Data</relationshipName>
    <type>Lookup</type>
</CustomField>