unpackaged/main/default/objects/Hard_Inquiry_Meta_Data__c/fields/Credit_Policy__c.field-meta.xml
<CustomField>
    <fullName>Credit_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Policy</label>
    <referenceTo>Credit_Policy__c</referenceTo>
    <relationshipLabel>Hard Inquiry Meta Data</relationshipLabel>
    <relationshipName>Hard_Inquiry_Meta_Data</relationshipName>
    <type>Lookup</type>
</CustomField>