unpackaged/main/default/objects/Hard_Inquiry_Meta_Data__c/fields/Inquiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Date__c</fullName>
    <label>Inquiry Date</label>
    <length>15</length>
    <type>Text</type>
</CustomField>