unpackaged/main/default/objects/Hard_Inquiry_Meta_Data__c/fields/Subscriber_Name__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Name__c</fullName>
    <label>Subscriber Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>